Fix output type dropdown cut off in IE

--- a/css/converter.css
+++ b/css/converter.css
@@ -70,7 +70,7 @@ p {
 font-size:16px;
 }
 #base {
-min-width:570px;
+min-width:586px;
 height:100%;
 }
 
